fix: responsive layout sdded more gap

--- a/css/login.css
+++ b/css/login.css
@@ -251,7 +251,7 @@ footer a:hover {
   color: red;
   font-size: var(--fs-16);
   margin: 0;
-  min-height: 20px;
+  min-height: 26px;
   display: block;
   visibility: hidden;
 }
@@ -342,57 +342,59 @@ footer a:hover {
     opacity: 1;
   }
 }
+
 .page-transition {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(42, 54, 71, 0.8); /* dunkles transparentes Blau */
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 0.4s ease;
-    opacity: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(42, 54, 71, 0.8);
+  /* dunkles transparentes Blau */
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.4s ease;
+  opacity: 1;
+}
+
+.page-transition.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.loading-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  color: white;
+  font-size: var(--fs-24);
+  font-weight: 600;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 5px solid var(--clr-300);
+  border-top: 5px solid var(--clr-500);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
   }
-  
-  .page-transition.hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
-  
-  .loading-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
-    color: white;
-    font-size: var(--fs-24);
-    font-weight: 600;
-  }
-  
-  .spinner {
-    width: 40px;
-    height: 40px;
-    border: 5px solid var(--clr-300);
-    border-top: 5px solid var(--clr-500);
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    to {
-      transform: rotate(360deg);
-    }
+}
+
+@keyframes hidden-overlay {
+  0% {
+    overflow: hidden;
   }
 
-  @keyframes hidden-overlay {
-    0%{
-      overflow: hidden;
-    }
-
-    100%{
-      overflow: auto;
-    }
+  100% {
+    overflow: auto;
   }
-  
+}
