--- a/css/responsive/privacy-policy-responsive.css
+++ b/css/responsive/privacy-policy-responsive.css
@@ -11,6 +11,7 @@
 @media (max-width: 1100px) {
     .privacy-main {
         margin: 0;
+        padding-bottom: 10vh;
     }
 }
 
